--- a/Dockerfile-php71
+++ b/Dockerfile-php71
@@ -80,12 +80,12 @@ RUN docker-php-ext-install oci8
 RUN docker-php-ext-configure pdo_oci  --with-pdo-oci=instantclient,/usr/local/instantclient/,12.1
 RUN docker-php-ext-install pdo_oci
 
-# RUN set -x \
-#     && cd /usr/src/php/ext/odbc \
-#     && phpize \
-#     && sed -ri 's@^ *test +"\$PHP_.*" *= *"no" *&& *PHP_.*=yes *$@#&@g' configure \
-#     && ./configure --with-unixODBC=shared,/usr \
-#     && docker-php-ext-install odbc
+RUN set -x \
+    && cd /usr/src/php/ext/odbc \
+    && phpize \
+    && sed -ri 's@^ *test +"\$PHP_.*" *= *"no" *&& *PHP_.*=yes *$@#&@g' configure \
+    && ./configure --with-unixODBC=shared,/usr \
+    && docker-php-ext-install odbc
 
 # RUN ln -s /usr/include /usr/local/incl \
 # && docker-php-ext-configure odbc --with-unixODBC=shared,/usr \
