--- a/Dockerfile-php56
+++ b/Dockerfile-php56
@@ -42,6 +42,8 @@ RUN apt-get update && apt-get install -y \
 
 RUN ln -s /usr/include/x86_64-linux-gnu/gmp.h /usr/include/gmp.h
 
+RUN docker-php-source extract
+
 RUN docker-php-ext-configure ldap --with-libdir=lib/x86_64-linux-gnu
 RUN docker-php-ext-install ldap
 RUN docker-php-ext-configure pdo_odbc  --with-pdo-odbc=unixODBC,/usr/
