update apt package

--- a/Dockerfile-php56
+++ b/Dockerfile-php56
@@ -101,7 +101,7 @@ RUN set -x \
 #       libmemcached-dev \
 #       libmysqlclient18 \
 
-RUN pecl install xdebug \
+RUN pecl install xdebug-2.5.5 \
     && echo "zend_extension=$(find /usr/local/lib/php/extensions/ -name xdebug.so)" > /usr/local/etc/php/conf.d/xdebug.ini \
     && echo "xdebug.remote_autostart=0" >> /usr/local/etc/php/conf.d/xdebug.ini \
     && echo "xdebug.remote_enable=1" >> /usr/local/etc/php/conf.d/xdebug.ini \
