--- a/production/Dockerfile-php56
+++ b/production/Dockerfile-php56
@@ -38,70 +38,46 @@ RUN apt-get update && apt-get install -y \
 		libmemcached-dev \
 		libmagickwand-dev \
 		poppler-utils \
-		ghostscript
-
-RUN ln -s /usr/include/x86_64-linux-gnu/gmp.h /usr/include/gmp.h
-
-RUN docker-php-source extract
-
-RUN docker-php-ext-configure ldap --with-libdir=lib/x86_64-linux-gnu
-RUN docker-php-ext-install ldap
-RUN docker-php-ext-configure pdo_odbc  --with-pdo-odbc=unixODBC,/usr/
-RUN docker-php-ext-install pdo_odbc
-RUN docker-php-ext-configure imap --with-imap --with-imap-ssl --with-kerberos
-RUN docker-php-ext-install imap
-RUN docker-php-ext-configure pdo_dblib --with-libdir=/lib/x86_64-linux-gnu
-RUN docker-php-ext-install pdo_dblib
-RUN docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/
-RUN docker-php-ext-install gd
-
-RUN docker-php-ext-install xmlreader bcmath bz2 calendar ctype curl dba dom enchant exif fileinfo ftp \
+		ghostscript \
+	&& ln -s /usr/include/x86_64-linux-gnu/gmp.h /usr/include/gmp.h \
+	&& docker-php-source extract \
+	&& docker-php-ext-configure ldap --with-libdir=lib/x86_64-linux-gnu \
+	&& docker-php-ext-install ldap \
+	&& docker-php-ext-configure pdo_odbc  --with-pdo-odbc=unixODBC,/usr/ \
+	&& docker-php-ext-install pdo_odbc \
+	&& docker-php-ext-configure imap --with-imap --with-imap-ssl --with-kerberos \
+	&& docker-php-ext-install imap \
+	&& docker-php-ext-configure pdo_dblib --with-libdir=/lib/x86_64-linux-gnu \
+	&& docker-php-ext-install pdo_dblib \
+	&& docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
+	&& docker-php-ext-install gd \
+	&& docker-php-ext-install xmlreader bcmath bz2 calendar ctype curl dba dom enchant exif fileinfo ftp \
 gettext gmp hash intl json mbstring mcrypt mysqli  opcache  pcntl pdo  pdo_firebird pdo_mysql \
-pdo_pgsql pdo_sqlite pgsql phar posix pspell readline recode session shmop simplexml snmp soap sockets \
-sysvmsg sysvsem sysvshm tidy tokenizer wddx xml xmlrpc xmlwriter xsl zip iconv interbase mysql
-
-RUN curl -O https://raw.githubusercontent.com/davidgaya/docker-apache-php-oci/master/instantclient-basic-linux.x64-12.1.0.2.0.zip
-RUN curl -O https://raw.githubusercontent.com/davidgaya/docker-apache-php-oci/master/instantclient-sdk-linux.x64-12.1.0.2.0.zip
-RUN curl -O https://raw.githubusercontent.com/davidgaya/docker-apache-php-oci/master/instantclient-sqlplus-linux.x64-12.1.0.2.0.zip
-
-RUN unzip instantclient-basic-linux.x64-12.1.0.2.0.zip -d /usr/local/
-RUN unzip instantclient-sdk-linux.x64-12.1.0.2.0.zip -d /usr/local/
-RUN unzip instantclient-sqlplus-linux.x64-12.1.0.2.0.zip -d /usr/local/
-
-RUN rm instantclient-basic-linux.x64-12.1.0.2.0.zip
-RUN rm instantclient-sdk-linux.x64-12.1.0.2.0.zip
-RUN rm instantclient-sqlplus-linux.x64-12.1.0.2.0.zip
-
-RUN ln -s /usr/local/instantclient_12_1 /usr/local/instantclient
-RUN ln -s /usr/local/instantclient/libclntsh.so.12.1 /usr/local/instantclient/libclntsh.so
-RUN ln -s /usr/local/instantclient/sqlplus /usr/bin/sqlplus
-RUN docker-php-ext-configure oci8 --with-oci8=instantclient,/usr/local/instantclient
-
-RUN docker-php-ext-install oci8
-
-RUN docker-php-ext-configure pdo_oci --with-pdo-oci=instantclient,/usr/local/instantclient/,12.1
-RUN docker-php-ext-install pdo_oci
-
-RUN set -x \
+pdo_pgsql pdo_sqlite pgsql posix pspell readline recode session shmop simplexml snmp soap sockets \
+sysvmsg sysvsem sysvshm tidy tokenizer wddx xml xmlrpc xmlwriter xsl zip iconv interbase mysql \
+	&& curl -O https://raw.githubusercontent.com/davidgaya/docker-apache-php-oci/master/instantclient-basic-linux.x64-12.1.0.2.0.zip \
+	&& curl -O https://raw.githubusercontent.com/davidgaya/docker-apache-php-oci/master/instantclient-sdk-linux.x64-12.1.0.2.0.zip \
+	&& curl -O https://raw.githubusercontent.com/davidgaya/docker-apache-php-oci/master/instantclient-sqlplus-linux.x64-12.1.0.2.0.zip \
+	&& unzip instantclient-basic-linux.x64-12.1.0.2.0.zip -d /usr/local/ \
+	&& unzip instantclient-sdk-linux.x64-12.1.0.2.0.zip -d /usr/local/ \
+	&& unzip instantclient-sqlplus-linux.x64-12.1.0.2.0.zip -d /usr/local/ \
+	&& rm instantclient-basic-linux.x64-12.1.0.2.0.zip \
+	&& rm instantclient-sdk-linux.x64-12.1.0.2.0.zip \
+	&& rm instantclient-sqlplus-linux.x64-12.1.0.2.0.zip \
+	&& ln -s /usr/local/instantclient_12_1 /usr/local/instantclient \
+	&& ln -s /usr/local/instantclient/libclntsh.so.12.1 /usr/local/instantclient/libclntsh.so \
+	&& ln -s /usr/local/instantclient/sqlplus /usr/bin/sqlplus \
+	&& docker-php-ext-configure oci8 --with-oci8=instantclient,/usr/local/instantclient \
+	&& docker-php-ext-install oci8 \
+	&& docker-php-ext-configure pdo_oci --with-pdo-oci=instantclient,/usr/local/instantclient/,12.1 \
+	&& docker-php-ext-install pdo_oci \
+	&& set -x \
     && cd /usr/src/php/ext/odbc \
     && phpize \
     && sed -ri 's@^ *test +"\$PHP_.*" *= *"no" *&& *PHP_.*=yes *$@#&@g' configure \
     && ./configure --with-unixODBC=shared,/usr \
-    && docker-php-ext-install odbc
-
-# RUN ln -s /usr/include /usr/local/incl \
-# && docker-php-ext-configure odbc --with-unixODBC=shared,/usr \
-# && docker-php-ext-install odbc
-
-# filter reflection spl standard 
-# 		
-# 		libfreetype6-dev \
-# 		zip \
-#       git \
-#       libmemcached-dev \
-#       libmysqlclient18 \
-
-RUN pecl install xdebug-2.5.5 \
+    && docker-php-ext-install odbc \
+	&& pecl install xdebug-2.5.5 \
     && echo "zend_extension=$(find /usr/local/lib/php/extensions/ -name xdebug.so)" > /usr/local/etc/php/conf.d/xdebug.ini \
     && echo "xdebug.remote_autostart=0" >> /usr/local/etc/php/conf.d/xdebug.ini \
     && echo "xdebug.remote_enable=1" >> /usr/local/etc/php/conf.d/xdebug.ini \
@@ -113,20 +89,13 @@ RUN pecl install xdebug-2.5.5 \
     && echo "xdebug.remote_host=172.17.0.1" >> /usr/local/etc/php/conf.d/xdebug.ini \
     && echo "xdebug.remote_port=9001" >> /usr/local/etc/php/conf.d/xdebug.ini \
     && echo "xdebug.idekey=PHPSTORM" >> /usr/local/etc/php/conf.d/xdebug.ini
-
-# for confirmation
-RUN cat /usr/local/etc/php/conf.d/xdebug.ini
-RUN php -i | grep xdebug.remote
-
-RUN pecl install imagick && docker-php-ext-enable imagick
-
-RUN pecl install memcached-2.2.0 && docker-php-ext-enable memcached
-
-RUN pecl install redis && docker-php-ext-enable redis
-
-RUN pecl install mongodb && docker-php-ext-enable mongodb
-
-RUN curl -sS https://getcomposer.org/installer | php -- --filename=composer --install-dir=/bin
+	&& cat /usr/local/etc/php/conf.d/xdebug.ini \
+	&& php -i | grep xdebug.remote \
+	&& pecl install imagick && docker-php-ext-enable imagick \
+	&& pecl install memcached-2.2.0 && docker-php-ext-enable memcached \
+	&& pecl install redis && docker-php-ext-enable redis \
+	&& pecl install mongodb && docker-php-ext-enable mongodb \
+	&& curl -sS https://getcomposer.org/installer | php -- --filename=composer --install-dir=/bin
 
 ENV PATH /root/.composer/vendor/bin:$PATH
 
@@ -137,9 +106,8 @@ RUN apt-get autoremove -y \
  	&& rm -rf /var/lib/apt/lists/* \
  	&& rm -rf /usr/share/doc /usr/share/man /usr/share/locale \
  	&& rm -rf /usr/src/php \
- 	&& rm -rf /tmp/pear
-
-RUN { \
+ 	&& rm -rf /tmp/pear \
+	&& { \
 		echo 'opcache.memory_consumption=128'; \
 		echo 'opcache.interned_strings_buffer=8'; \
 		echo 'opcache.max_accelerated_files=4000'; \
