--- a/Dockerfile-php70
+++ b/Dockerfile-php70
@@ -132,6 +132,8 @@ RUN curl -sS https://getcomposer.org/installer | php -- --filename=composer --in
 
 ENV PATH /root/.composer/vendor/bin:$PATH
 
+ENV LD_LIBRARY_PATH /usr/local/instantclient_12_1/
+
 RUN curl https://phar.phpunit.de/phpunit.phar -L > phpunit.phar && chmod +x phpunit.phar && mv phpunit.phar /usr/local/bin/phpunit
 
 RUN apt-get autoremove -y \
