--- a/production/Dockerfile-php71
+++ b/production/Dockerfile-php71
@@ -98,6 +98,7 @@ sysvmsg sysvsem sysvshm tidy tokenizer wddx xml xmlrpc xmlwriter xsl zip iconv i
     && curl -sS https://getcomposer.org/installer | php -- --filename=composer --install-dir=/bin
 
 ENV PATH /root/.composer/vendor/bin:$PATH
+ENV LD_LIBRARY_PATH /usr/local/instantclient_12_1/
 
 RUN curl https://phar.phpunit.de/phpunit.phar -L > phpunit.phar && chmod +x phpunit.phar && mv phpunit.phar /usr/local/bin/phpunit \
     && apt-get autoremove -y \
