--- a/Dockerfile-php73
+++ b/Dockerfile-php73
@@ -1,4 +1,4 @@
-FROM php:7.2-fpm
+FROM php:7.3-fpm
 
 MAINTAINER Clement Yuan <spyworldxp@gmail.com>
 
@@ -37,7 +37,8 @@ RUN apt-get update && apt-get install -y \
 		libmemcached-dev \
 		libmagickwand-dev \
 		poppler-utils \
-		ghostscript
+		ghostscript \
+		libzip-dev
 
 RUN ln -s /usr/include/x86_64-linux-gnu/gmp.h /usr/include/gmp.h
 
@@ -80,6 +81,9 @@ RUN docker-php-ext-install oci8
 
 RUN docker-php-ext-configure pdo_oci  --with-pdo-oci=instantclient,/usr/local/instantclient/,12.1
 RUN docker-php-ext-install pdo_oci
+
+# RUN sh -c "echo /usr/local/instantclient > /etc/ld.so.conf.d/oracle.conf"
+# RUN ldconfig
 
 RUN set -x \
     && cd /usr/src/php/ext/odbc \
