--- a/Dockerfile-php70
+++ b/Dockerfile-php70
@@ -152,5 +152,5 @@ RUN { \
 		echo 'opcache.enable_cli=1'; \
 	} > /usr/local/etc/php/conf.d/opcache-recommended.ini
 
-EXPOSE 9000 9001
+EXPOSE 9000
 CMD ["php-fpm"]
