--- a/Dockerfile-php71
+++ b/Dockerfile-php71
@@ -150,5 +150,5 @@ RUN { \
 		echo 'opcache.enable_cli=1'; \
 	} > /usr/local/etc/php/conf.d/opcache-recommended.ini
 
-EXPOSE 9000 9001
+EXPOSE 9000
 CMD ["php-fpm"]
