--- a/production/Dockerfile-php73
+++ b/production/Dockerfile-php73
@@ -1,4 +1,4 @@
-FROM php:7.1-fpm
+FROM php:7.3-fpm
 
 MAINTAINER Clement Yuan <spyworldxp@gmail.com>
 
@@ -14,7 +14,6 @@ RUN apt-get update && apt-get install -y \
 		libicu-dev \
 		libldap2-dev \
 		libpng-dev \
-		libmcrypt-dev \
 		unixodbc-dev \
 		firebird-dev \
 		libpq-dev \
@@ -39,6 +38,7 @@ RUN apt-get update && apt-get install -y \
 		libmagickwand-dev \
 		poppler-utils \
 		ghostscript \
+        libzip-dev \
     && ln -s /usr/include/x86_64-linux-gnu/gmp.h /usr/include/gmp.h \
     && docker-php-source extract \
     && docker-php-ext-configure ldap --with-libdir=lib/x86_64-linux-gnu \
@@ -52,7 +52,7 @@ RUN apt-get update && apt-get install -y \
     && docker-php-ext-configure gd --enable-gd-native-ttf --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install gd \
     && docker-php-ext-install bcmath bz2 calendar ctype curl dba dom enchant exif fileinfo ftp \
-gettext gmp hash intl json mbstring mcrypt mysqli  opcache  pcntl pdo  pdo_firebird pdo_mysql \
+gettext gmp hash intl json mbstring mysqli  opcache  pcntl pdo  pdo_firebird pdo_mysql \
 pdo_pgsql pdo_sqlite pgsql phar posix pspell readline recode session shmop simplexml snmp soap sockets \
 sysvmsg sysvsem sysvshm tidy tokenizer wddx xml xmlrpc xmlwriter xsl zip iconv interbase \
     && curl -O https://raw.githubusercontent.com/davidgaya/docker-apache-php-oci/master/instantclient-basic-linux.x64-12.1.0.2.0.zip \
@@ -69,7 +69,7 @@ sysvmsg sysvsem sysvshm tidy tokenizer wddx xml xmlrpc xmlwriter xsl zip iconv i
     && ln -s /usr/local/instantclient/sqlplus /usr/bin/sqlplus \
     && docker-php-ext-configure oci8 --with-oci8=instantclient,/usr/local/instantclient \
     && docker-php-ext-install oci8 \
-    && docker-php-ext-configure pdo_oci  --with-pdo-oci=instantclient,/usr/local/instantclient/,12.1 \
+    && docker-php-ext-configure pdo_oci --with-pdo-oci=instantclient,/usr/local/instantclient/,12.1 \
     && docker-php-ext-install pdo_oci \
     && set -x \
     && cd /usr/src/php/ext/odbc \
