--- a/production/Dockerfile-laravel73
+++ b/production/Dockerfile-laravel73
@@ -99,7 +99,7 @@ sysvmsg sysvsem sysvshm tidy tokenizer wddx xml xmlrpc xmlwriter xsl zip iconv i
     && composer global require "friendsofphp/php-cs-fixer" \
     && composer global require "squizlabs/php_codesniffer=*" \
     && composer global require "phpmd/phpmd=@stable" \
-    && composer global require "phpunit/phpunit" \
+    && composer global require "phpunit/phpunit=^7.0" \
     && composer global require "phpunit/dbunit" \
     && composer global require "phing/phing" \
     && composer global require "phpdocumentor/phpdocumentor" \
