--- a/Dockerfile-laravel73
+++ b/Dockerfile-laravel73
@@ -38,7 +38,8 @@ RUN apt-get update && apt-get install -y \
 		libmagickwand-dev \
 		poppler-utils \
 		ghostscript \
-		libzip-dev
+		libzip-dev \
+		libmcrypt-dev
 
 RUN ln -s /usr/include/x86_64-linux-gnu/gmp.h /usr/include/gmp.h
 
@@ -128,6 +129,8 @@ RUN pecl install memcached && docker-php-ext-enable memcached
 RUN pecl install redis && docker-php-ext-enable redis
 
 RUN pecl install mongodb && docker-php-ext-enable mongodb
+
+RUN pecl install mcrypt-1.0.2 && docker-php-ext-enable mcrypt
 
 RUN curl -sS https://getcomposer.org/installer | php -- --filename=composer --install-dir=/bin
 
