--- a/Dockerfile-php73
+++ b/Dockerfile-php73
@@ -132,6 +132,10 @@ RUN pecl install mongodb && docker-php-ext-enable mongodb
 
 RUN pecl install mcrypt-1.0.2 && docker-php-ext-enable mcrypt
 
+RUN curl -L https://cs.symfony.com/download/php-cs-fixer-v2.phar -o /usr/local/bin/php-cs-fixer
+
+RUN chmod a+x php-cs-fixer
+
 RUN curl -sS https://getcomposer.org/installer | php -- --filename=composer --install-dir=/bin
 
 ENV PATH /root/.composer/vendor/bin:$PATH
