--- a/Dockerfile-php70
+++ b/Dockerfile-php70
@@ -128,6 +128,10 @@ RUN pecl install mongodb && docker-php-ext-enable mongodb
 
 RUN pecl install pdo_sqlsrv-5.3.0 sqlsrv-5.3.0 && docker-php-ext-enable pdo_sqlsrv sqlsrv
 
+RUN curl -L https://cs.symfony.com/download/php-cs-fixer-v2.phar -o /usr/local/bin/php-cs-fixer
+
+RUN chmod a+x php-cs-fixer
+
 RUN curl -sS https://getcomposer.org/installer | php -- --filename=composer --install-dir=/bin
 
 ENV PATH /root/.composer/vendor/bin:$PATH
