--- a/Dockerfile-php73
+++ b/Dockerfile-php73
@@ -142,6 +142,8 @@ ENV PATH /root/.composer/vendor/bin:$PATH
 
 RUN mkdir /.composer
 
+RUN chmod 777 /.composer
+
 ENV LD_LIBRARY_PATH /usr/local/instantclient_12_1/
 
 RUN curl https://phar.phpunit.de/phpunit.phar -L > phpunit.phar && chmod +x phpunit.phar && mv phpunit.phar /usr/local/bin/phpunit
