--- a/production/Dockerfile-php56
+++ b/production/Dockerfile-php56
@@ -98,7 +98,8 @@ sysvmsg sysvsem sysvshm tidy tokenizer wddx xml xmlrpc xmlwriter xsl zip iconv i
 	&& curl -L https://cs.symfony.com/download/php-cs-fixer-v2.phar -o /usr/local/bin/php-cs-fixer \
 	&& chmod a+x /usr/local/bin/php-cs-fixer \
 	&& curl -sS https://getcomposer.org/installer | php -- --filename=composer --install-dir=/bin \
-	&& mkdir /.composer
+	&& mkdir /.composer \
+    && chmod 777 /.composer
 
 ENV PATH /root/.composer/vendor/bin:$PATH
 ENV LD_LIBRARY_PATH /usr/local/instantclient_12_1/
