--- a/production/Dockerfile-php70
+++ b/production/Dockerfile-php70
@@ -97,7 +97,8 @@ sysvmsg sysvsem sysvshm tidy tokenizer wddx xml xmlrpc xmlwriter xsl zip iconv i
     && chmod a+x /usr/local/bin/php-cs-fixer \
     && pecl install pdo_sqlsrv-5.3.0 sqlsrv-5.3.0 && docker-php-ext-enable pdo_sqlsrv sqlsrv \
     && curl -sS https://getcomposer.org/installer | php -- --filename=composer --install-dir=/bin \
-    && mkdir /.composer
+    && mkdir /.composer \
+    && chmod 777 /.composer
 
 ENV PATH /root/.composer/vendor/bin:$PATH
 ENV LD_LIBRARY_PATH /usr/local/instantclient_12_1/
