--- a/production/Dockerfile-php74
+++ b/production/Dockerfile-php74
@@ -100,7 +100,8 @@ sysvmsg sysvsem sysvshm tidy tokenizer wddx xml xmlrpc xmlwriter xsl zip iconv i
     && chmod a+x /usr/local/bin/php-cs-fixer \
     && pecl install mcrypt-1.0.2 && docker-php-ext-enable mcrypt \
     && curl -sS https://getcomposer.org/installer | php -- --filename=composer --install-dir=/bin \
-    && mkdir /.composer
+    && mkdir /.composer \
+    && chmod 777 /.composer
 
 ENV PATH /root/.composer/vendor/bin:$PATH
 ENV LD_LIBRARY_PATH /usr/local/instantclient_12_1/
