--- a/production/Dockerfile-php80
+++ b/production/Dockerfile-php80
@@ -29,9 +29,7 @@ RUN curl -L -O https://github.com/php/php-src/archive/master.zip
 RUN unzip master.zip
 RUN cd php-src-master/
 
-RUN ./buildconf
-
-RUN ./configure \
+RUN buildconf && ./configure \
         --enable-fpm  \
         --enable-phpdbg  \
         --enable-gcov  \
