--- a/production/Dockerfile-php74
+++ b/production/Dockerfile-php74
@@ -40,6 +40,7 @@ RUN apt-get update && apt-get install -y \
 		ghostscript \
         libzip-dev \
         libmcrypt-dev \
+        libonig-dev \
     && ln -s /usr/include/x86_64-linux-gnu/gmp.h /usr/include/gmp.h \
     && docker-php-source extract \
     && docker-php-ext-configure ldap --with-libdir=lib/x86_64-linux-gnu \
@@ -53,9 +54,9 @@ RUN apt-get update && apt-get install -y \
     && docker-php-ext-configure gd \
     && docker-php-ext-install gd \
     && docker-php-ext-install bcmath bz2 calendar ctype curl dba dom enchant exif fileinfo ftp \
-gettext gmp hash intl json mbstring mysqli  opcache  pcntl pdo  pdo_firebird pdo_mysql \
-pdo_pgsql pdo_sqlite pgsql phar posix pspell readline recode session shmop simplexml snmp soap sockets \
-sysvmsg sysvsem sysvshm tidy tokenizer wddx xml xmlrpc xmlwriter xsl zip iconv interbase \
+gettext gmp intl json mbstring mysqli  opcache  pcntl pdo  pdo_firebird pdo_mysql \
+pdo_pgsql pdo_sqlite pgsql phar posix pspell readline session shmop simplexml snmp soap sockets \
+sysvmsg sysvsem sysvshm tidy tokenizer xml xmlrpc xmlwriter xsl zip iconv \
     && curl -O https://raw.githubusercontent.com/davidgaya/docker-apache-php-oci/master/instantclient-basic-linux.x64-12.1.0.2.0.zip \
     && curl -O https://raw.githubusercontent.com/davidgaya/docker-apache-php-oci/master/instantclient-sdk-linux.x64-12.1.0.2.0.zip \
     && curl -O https://raw.githubusercontent.com/davidgaya/docker-apache-php-oci/master/instantclient-sqlplus-linux.x64-12.1.0.2.0.zip \
@@ -99,7 +100,7 @@ sysvmsg sysvsem sysvshm tidy tokenizer wddx xml xmlrpc xmlwriter xsl zip iconv i
     && pecl install mongodb && docker-php-ext-enable mongodb \
     && curl -L https://cs.symfony.com/download/php-cs-fixer-v2.phar -o /usr/local/bin/php-cs-fixer \
     && chmod a+x /usr/local/bin/php-cs-fixer \
-    && pecl install mcrypt-1.0.2 && docker-php-ext-enable mcrypt \
+    && pecl install mcrypt-1.0.3 && docker-php-ext-enable mcrypt \
     && curl -sS https://getcomposer.org/installer | php -- --filename=composer --install-dir=/bin \
     && mkdir /.composer \
     && chmod 777 /.composer
